添加了很多数据展示 、post

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@plugin "@tailwindcss/typography";
 
 :root {
   --background: #ffffff;
@@ -25,6 +26,10 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: var(--font-app-sans), Arial, Helvetica, sans-serif;
+}
+
+html,body{
+  scroll-behavior: smooth;
 }
 
 .appShell {
